# ynov-test-test-unit

./: .gitignore  README.md  docker-compose.java.yml  docker-compose.js.yml  docker-compose.php.yml  docker-compose.python.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js  tableau_comparatif_technos_methodes.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
backend-java/: .dockerignore  Dockerfile  README.md
backend-java/src/: App.java  Calculator.java
backend-java/tests/: TestRunner.java
backend-js/: .dockerignore  Dockerfile  README.md
backend-js/src/: server.js
backend-js/tests/: api.test.js  api_http.test.js
backend-php/: Dockerfile  README.md
backend-php/src/: Calculator.php  index.php
backend-php/tests/: TestRunner.php
backend-python/: .gitignore  Dockerfile  README.md
backend-python/src/: __init__.py  app.py  calculator.py
backend-python/tests/: test_api.py
backend/src/: app.py  server.js
backend/tests/: api.test.js  test_api.py  test_api_http.py  test_calculator.py
calculator-api-js/: eslint.config.js  jest.config.js  package-lock.json  package.json
calculator-api-js/.github/workflows/: ci.yml
calculator-api-js/src/: calculator.js  server.js
calculator-api-js/tests/: api.test.js  calculator.test.js
frontend/: .dockerignore  Dockerfile  index.html  main.js  style.css
gateway/: nginx.conf
tests/: calculator.spec.js
(+1 files in other folders)
