[project]
name = "calculator-api-flask"
version = "1.0.0"
description = "API Calculatrice en Python Flask"
requires-python = ">=3.12"
dependencies = [
  "Flask==3.1.2",
  "redis==6.4.0",
  "gunicorn==23.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
